--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@types/react-calendar": "^4.1.0",
@@ -20,6 +21,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "next-themes": "^0.4.6",
     "prisma": "^6.14.0",
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
